--- a/src/sass/modules/_base.scss
+++ b/src/sass/modules/_base.scss
@@ -1,8 +1,10 @@
 
 %clearfix{
-    content: '';
-    display: block;
-    clear: both;
+    &::after{
+        content: '';
+        display: block;
+        clear: both;
+    }
 }
 .a11y-hidden{
     width: 1px;
