--- a/src/sass/modules/_grid.scss
+++ b/src/sass/modules/_grid.scss
@@ -1,50 +1,50 @@
 $container-width: 100%;
 $grid-max-width: 1200px;
 .container{
-    width: $container-width;
+  width: $container-width;
 }
 .grid{
-    max-width: $grid-max-width;
-    margin: 0 auto;
-    @extend %clearfix;
+  max-width: $grid-max-width;
+  margin: 0 auto;
+  @extend %clearfix;
 }
 .col {
-    float: left;
-    width: 100%;
-    position: relative;
-    box-sizing: border-box;
+  float: left;
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
 }
-$device: (mobile,4,10), (tablet,8,15), (desktop,12,20); // 디바이스 종류 : grid column 갯수
+$device: (mobile,4,10), (tablet,8,10), (desktop,12,10); // 디바이스 종류 : grid column 갯수
 @each $device-code, $col-count, $col-padding in $device {
-    @include breakpoint(#{$device-code}){   // 디바이스 별 media 쿼리 호출
-        .col{
-            padding-left: #{$col-padding}px;
-            padding-right: #{$col-padding}px;
-        }
-        $code-split: str-slice(#{$device-code},1,1);
-        @for $i from 1 through $col-count { // 디바이스 별 col width, push, pull, offset
-            .col-#{$code-split}-#{$i}{  // col width
-                width: 100% / $col-count * $i;
-            }
-            @if ($i != $col-count){
-                .col-#{$code-split}-push-#{$i}{ // col push
-                    left: (100% / $col-count) * $i;
-                }
-                .col-#{$code-split}-pull-#{$i}{ // col pull
-                    right: (100% / $col-count) * $i;
-                }
-                .col-#{$code-split}-offset-#{$i}{   // col offset
-                    margin-left: (100% / $col-count) * $i;
-                }
-            }
-        }
+  @include breakpoint(#{$device-code}){   // 디바이스 별 media 쿼리 호출
+    .col{
+      padding-left: #{$col-padding}px;
+      padding-right: #{$col-padding}px;
     }
+    $code-split: str-slice(#{$device-code},1,1);
+    @for $i from 1 through $col-count { // 디바이스 별 col width, push, pull, offset
+      .col-#{$code-split}-#{$i}{  // col width
+        width: (100% / $col-count) * $i;
+      }
+      @if ($i != $col-count){
+        .col-#{$code-split}-push-#{$i}{ // col push
+          left: (100% / $col-count) * $i;
+        }
+        .col-#{$code-split}-pull-#{$i}{ // col pull
+          right: (100% / $col-count) * $i;
+        }
+        .col-#{$code-split}-offset-#{$i}{   // col offset
+          margin-left: (100% / $col-count) * $i;
+        }
+      }
+    }
+  }
 }
 // 이중여백 제거
 .alpha{
-    padding-left: 0;
+  padding-left: 0;
 }
 .omega{
-    padding-right: 0;
+  padding-right: 0;
 }
 
