--- a/src/sass/modules/_grid.scss
+++ b/src/sass/modules/_grid.scss
@@ -6,6 +6,8 @@ $grid-max-width: 1200px;
 .grid{
     max-width: $grid-max-width;
     margin: 0 auto;
+}
+.grid::after{
     @extend %clearfix;
 }
 .col {
@@ -14,7 +16,7 @@ $grid-max-width: 1200px;
     position: relative;
     box-sizing: border-box;
 }
-$device: (mobile,4,10), (tablet,8,15), (desktop,12,20); // 디바이스 종류 : grid column 갯수
+$device: (mobile,4,10), (tablet,8,10), (desktop,12,10); // 디바이스 종류 : grid column 갯수
 @each $device-code, $col-count, $col-padding in $device {
     @include breakpoint(#{$device-code}){   // 디바이스 별 media 쿼리 호출
         .col{
