--- a/src/sass/modules/_grid.scss
+++ b/src/sass/modules/_grid.scss
@@ -6,6 +6,8 @@ $grid-max-width: 1200px;
 .grid{
     max-width: $grid-max-width;
     margin: 0 auto;
+}
+.grid::after{
     @extend %clearfix;
 }
 .col {
