--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -13,7 +13,6 @@
   width: 42px;
   height: 42px;
   border: 1px solid skyblue;
-  border-radius: 15px;
   background-color: skyblue;
   color: #fff;
 }
@@ -36,37 +35,32 @@
   width: 100%;
 }
 .footer{
-  height: 231px;
-  background-color: #4facfe;
+  background-color: #0081ff;
   font-size: 2.6rem;
 }
 .footer1{
-  margin-top: 63px;
+  text-align: center;
+  margin-top: $leading * 2;
   color: #fff;
 }
 .sign-up-button{
-  width: 90%;
+  width: 100%;
   height: 63px;
-  margin-top: 21px;
-  background-color: #4facfe;
+  margin-top: $leading;
+  margin-bottom: $leading * 2;
+  background-color: transparent;
   border: 2px solid #fff;
   border-radius: 10px;
   color: #fff;
   font-size: 1.6rem;
 }
 .copyright{
-  background-color: #181818
+  background-color: #363636;
 }
 .copyright1{
   color: #f7f7f7;
   margin-top: 210px;
   margin-left: 20px;
-}
-.mt-1{
-  margin-top: $leading;
-}
-.mt-2{
-  margin-top : $leading * 2;
 }
 h2{
   text-align: center;
