--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -245,7 +245,7 @@ h2{
   position: relative;
   width: 100%;
   height: 231px;
-  background: url('./assets/main/banner.jpg') 0 0/cover;
+  background: url('/assets/main/banner.jpg') 0 0/cover;
 }
 .main-banner-paragh{
   position: relative;
