--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -106,7 +106,6 @@ h2{
     width: 70px;
   }
   .favorite-lecture-image{
-    background: tomato;
     a{
       display: block;
       height: 230px;
@@ -144,19 +143,22 @@ h2{
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
 }
 // 인기 강의 별점
-.favorite-star{
-  position: relative;
-  display: flex;
-  width: 70px;
-  margin: 0 auto;
-  justify-content: space-around;
+.star-rate{
   font-size: 2.2rem;
   .ion-ios-star{
-    color: #007aff;
+    color: #cece09;
   }
   .ion-ios-star-outline{
     color: #bbc0d4;
   }
+}
+.favorite-star{
+  @extend .star-rate;
+  position: relative;
+  display: flex;
+  width: 70px;
+  justify-content: space-around;
+  margin: 0 auto;
 }
 // 인기 강의 이전, 다음 버튼
 .prev-next-btns{
@@ -181,8 +183,8 @@ h2{
   border: 1px solid #bbc0d4;
   // padding: 10px 20px;
   line-height: 40px;
-  width: 185px;
-  margin: 30px auto 0 auto;
+  width: 100%;
+  margin-top: 30px;
   text-align: center;
   overflow: hidden;
   &::before{
@@ -191,7 +193,7 @@ h2{
     position: absolute;
     transform: translateX(-50%);
     margin-left: 50%;
-    height: 40px;
+    height: 100%;
     width: 0;
     left: 0;
     transition: width 0.4s;
@@ -200,7 +202,7 @@ h2{
     content: '인기 강의 더 보기';
     position: absolute;
     font-size: 1.4rem;
-    width: 185px;
+    width: 100%;
     display: block;
     left: 0;
     top: 0;
@@ -209,7 +211,7 @@ h2{
     border: 1px solid #bbc0d4;
     color: #fff;
     &::before{
-      width: 185px;
+      width: 100%;
     }
     &::after{
       color: #fff;
@@ -225,28 +227,54 @@ h2{
     margin-top: 20px;
     display: flex;
     justify-content: space-around;
+  
     .category-btn-all{
       border: 1px solid #bbc0d4;
       display: inline-block;
-      width: 160px;
       text-align: center;
-      font-size: 2.1rem;
-      padding: 20px 0;
-      line-height: 50px;
-      &:hover, &:focus{
-        background-color: #007aff;
-        color: #fff;
+    }
+    @include breakpoint(desktop){ 
+      .category-btn-all{
+        width: 160px;
+        font-size: 3rem;
+        padding: 20px 0;
+        line-height: 50px;
       }
+    }
+    @include breakpoint(tablet){ 
+      .category-btn-all{
+        width: 33.33%;
+        font-size: 3rem;
+        padding: 10px 0;
+        line-height: 35px;
+      }
+      .category-btn-all:first-child{
+        width: 100%;
+      }
+      flex-wrap: wrap;
+    }
+    @include breakpoint(mobile){ 
+      .category-btn-all{
+        width: 50%;
+        font-size: 3rem;
+        padding: 20px 0;
+        line-height: 50px;
+      }
+      .category-btn-all:first-child{
+        width: 100%;
+      }
+      flex-wrap: wrap;
+    }
+    .category-btn-all:hover, .category-btn-all:focus{
+      background-color: #007aff;
+      color: #fff;
+    }
+    .category-btn-all > small {
+      font-size: 1.8rem;
     }
   }
 }
-  
-.main-banner-bottom{
-  position: relative;
-  width: 100%;
-  height: 231px;
-  background: url('/assets/main/banner.jpg') 0 0/cover;
-}
+
 .main-banner-paragh{
   position: relative;
   top: 50%;
@@ -299,7 +327,4 @@ h2{
     border-radius: 40px;
     border: 2px solid #dcdcdc;
   }
-  .star{
-    font-size: 2.1rem;
-    }
 }
