--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -328,3 +328,132 @@ h2{
     border: 2px solid #dcdcdc;
   }
 }
+
+// category list
+
+.container.category-container{
+  .category-btns{
+    .category-list-btn-all{
+      border: 1px solid #bbc0d4;
+      display: inline-block;
+      text-align: center;
+    }
+    @include breakpoint(desktop){ 
+      .category-list-btn-all{
+        width: 160px;
+        font-size: 3rem;
+        padding: 10px 0;
+        line-height: 30px;
+      }
+    }
+    @include breakpoint(tablet){ 
+      .category-list-btn-all{
+        width: 33.33%;
+        font-size: 3rem;
+        padding: 50px 0;
+        line-height: 35px;
+      }
+      .category-list-btn-all:first-child{
+        width: 100%;
+      }
+      flex-wrap: wrap;
+    }
+    @include breakpoint(mobile){ 
+      .category-list-btn-all{
+        width: 50%;
+        font-size: 3rem;
+        padding: 20px 0;
+        line-height: 50px;
+      }
+      .category-list-btn-all:first-child{
+        width: 100%;
+      }
+      flex-wrap: wrap;
+    }
+    .category-list-btn-all:hover, .category-list-btn-all:focus{
+      // background-color: #007aff;
+      background-color: #007aff;
+      color: #fff;
+    }
+    .category-list-btn-all > small {
+      font-size: 1.8rem;
+    }
+  }
+}
+
+  .select-box{
+    width: 100%;
+    height: 42px;
+    padding-left: 10px;
+    font-size: 1.4rem;
+    color: #bcbcbc;
+    border: 1px solid #ebebeb;
+    background-color: #fff;
+    // -webkit-appearance: none;
+  
+}
+
+  .list-search{
+    border: 1px solid #e3e3e3;
+    width: 100%;
+    height: 42px;
+    padding-left: 10px
+  }
+  .list-search-btn{
+    border: 1px solid #0081ff;
+    background: #0081ff;
+    color: #fff;
+    width: 80%;
+    height: 42px;
+  }
+  
+  .text{
+    text-align: center;
+  }
+  .category-list-more-btn{
+  display: block;
+  position: relative;
+  font-size: 0;
+  border: 1px solid #bbc0d4;
+  // padding: 10px 20px;
+  line-height: 40px;
+  width: 100%;
+  margin-top: 30px;
+  text-align: center;
+  overflow: hidden;
+  &::before{
+    content: '';
+    background-color: #007aff;
+    position: absolute;
+    transform: translateX(-50%);
+    margin-left: 50%;
+    height: 100%;
+    width: 0;
+    left: 0;
+    transition: width 0.4s;
+  }
+  &::after{
+    content: '강의 더 보기';
+    position: absolute;
+    font-size: 1.4rem;
+    width: 100%;
+    display: block;
+    left: 0;
+    top: 0;
+  }
+  &:hover{
+    border: 1px solid #bbc0d4;
+    color: #fff;
+    &::before{
+      width: 100%;
+    }
+    &::after{
+      color: #fff;
+    }
+  }
+}
+
+  // footer
+  .category-copyright{
+    margin-top: 231px
+  }
