--- a/src/sass/modules/_grid.scss
+++ b/src/sass/modules/_grid.scss
@@ -56,3 +56,12 @@ $device: (mobile,4,10), (tablet,8,10), (desktop,12,10); // 디바이스 종류 :
 .mt-2{
   margin-top : $leading * 2;
 }
+.mt-3{
+  margin-top : $leading * 3;
+}
+.mt-4{
+  margin-top : $leading * 4;
+}
+.mt-5{
+  margin-top : $leading * 5;
+}
