lecture-title 높이 추가

--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -135,6 +135,7 @@ h4{
   padding: 0 32px;
   height: 72px;
   .favorite-lecture-title{
+    height: 48px;
     font-size: 1.6rem;
   }
   .favorite-lecture-user{
