--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -4,7 +4,7 @@ h2{
   font-size: $subtitle-font-size;
 }
 h3{
-  font-size: 2.0rem;
+  font-size: 2.1rem;
   span {
     font-size: 1.6rem;
   }
@@ -58,6 +58,10 @@ h4{
 .main-video{
   height: 100%;
   width: 100%;
+}
+.health-image {
+  height: 200px;
+  background-color: skyblue;
 }
 .footer{
   background-color: #0081ff;
@@ -339,19 +343,16 @@ h4{
     }
   }
 }
-
-  .select-box{
-    width: 100%;
-    height: 42px;
-    padding-left: 10px;
-    font-size: 1.4rem;
-    color: #bcbcbc;
-    border: 1px solid #ebebeb;
-    background-color: #fff;
-    // -webkit-appearance: none;
-  
+.select-box{
+  width: 100%;
+  height: 42px;
+  padding-left: 10px;
+  font-size: 1.4rem;
+  color: #bcbcbc;
+  border: 1px solid #ebebeb;
+  background-color: #fff;
+  // -webkit-appearance: none;
 }
-
   .list-search{
     border: 1px solid #e3e3e3;
     width: 100%;
@@ -411,33 +412,40 @@ h4{
     }
   }
 }
-
-  // footer
-  .category-copyright{
-    margin-top: 231px
-  }
-
+// footer
+.category-copyright{
+  margin-top: 231px
+}
 //  버튼 스타일
 .btn-group{
   text-align: center;
-
+  &.left{
+    text-align: left;
+  }
   & > a{
+    margin-top : 5px;
     margin-left: 5px;
   }
 }
-.btn-submit{
+%btn-style{
   display: inline-block;
   padding: $leading;
+  font-size: 1.8rem;
+}
+.btn-submit{
+  @extend %btn-style;
   background: #007aff;
   border: 1px solid #007aff;
   color: #fff;
-  font-size: 1.8rem;
 }
 .btn-white{
-  display: inline-block;
-  padding: $leading;
+  @extend %btn-style;
   border: 1px solid #dcdcdc;
-  font-size: 1.8rem;
+}
+.btn-gray{
+  @extend %btn-style;
+  border: 1px solid #dcdcdc;
+  background: #dcdcdc;
 }
 .is-small{
   padding: $leading / 2;
@@ -447,13 +455,10 @@ h4{
   width: 100%;
   text-align: center;
 }
-
 // border bottom
 .bb{
   border-bottom: 1px solid #e6e6e6;
 }
-
-
 .modal{
   position: fixed;
   top: 0;
@@ -477,12 +482,14 @@ h4{
   right: 0;
   background: rgba(10, 10, 10, 0.86);
 }
-
 .modal-content{
     position: relative;
     overflow: auto;
+    background: #fff;
+    width: 80vw;
+    border-radius: 5px;
+    padding: $leading;
 }
-
 .modal-close{
   position: absolute;
   right: 10px;
