--- a/src/sass/modules/_settings.scss
+++ b/src/sass/modules/_settings.scss
@@ -32,5 +32,15 @@ h1{
     font-size: 2.4rem;
 }
 h2{
-    font-size: 1.8rem;
+    font-size: $subtitle-font-size;
+    text-align: center;
+}
+h3{
+  font-size: 2.1rem;
+  span {
+    font-size: 1.6rem;
+  }
+}
+h4{
+  font-size: 1.8rem;
 }
