--- a/src/sass/modules/_grid.scss
+++ b/src/sass/modules/_grid.scss
@@ -40,6 +40,9 @@ $device: (mobile,4,10), (tablet,8,10), (desktop,12,10); // 디바이스 종류 :
         }
       }
     }
+    .col-#{$code-split}-hd{
+      display: none;
+    }
   }
 }
 // 이중여백 제거
